--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="apresentacao">
         <img src= "assets/Achadinhos.png" alt="Logo da página"> 
         <div class="botoes">
-            <h2 class="links__titulo"> Acesse minhas redes:</h2>
+            <h2 class="links__titulo"> Acesse as redes:</h2>
             <a class="apresentacao__links"href="https://instagram.com/achadinhosdaarantes"><img class="Insta" src="assets/instagram.png" alt="Instagram">Instagram
             </a>
             <a class="apresentacao__links"href="https://m.facebook.com/achadinhosdaarantes"><img class="Face" src="assets/facebook.png" alt="Facebook">Facebook
